# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "libui-ng-sys"
version = "0.2.0"
authors = ["norepimorphism <norepi@protonmail.com>"]
edition = "2021"
description = "Bindings for libui-ng"
repository = "https://github.com/norepimorphism/libui-ng-sys"
license = "MPL-2.0"
categories = ["external-ffi-bindings", "gui", "os"]
build = "build.rs"
links = "ui"

[dependencies]

[build-dependencies]
bindgen = "0.59"
git2 = "0.14"
pkg-config = "0.3"
static_init = "1.0"

[features]
static-libui = []
darwin-ext = []
unix-ext = []
windows-ext = []
