# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[package]
name = "libui-ng-sys"
version = "0.3.1"
authors = ["norepimorphism <norepi@protonmail.com>"]
edition = "2021"
description = "Bindings for libui-ng"
repository = "https://github.com/norepimorphism/libui-ng-sys"
license = "MPL-2.0"
categories = ["external-ffi-bindings", "gui", "os"]
build = "build.rs"
links = "ui"

[features]
build = []
default = ["build"]

[package.metadata.docs.rs]
no-default-features = true
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]

[dependencies]

[build-dependencies]
anyhow = "1.0"
bindgen = "0.59"
build_cfg = "1.1"
pkg-config = "0.3"
rusync = "0.7"
# winres = "0.1"
